completed site plan. Added porpose, Audience, Branding: Logo. Style guide: Color palette, typography, and navegation.

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -23,14 +23,15 @@
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>Meet "Kayla," an adventurous and thrill-seeking individual in her mid-20s who loves spending time in the great outdoors. Kayla has always been drawn to the rush of adrenaline that comes with challenging activities, and she has a particular passion for white water rafting. She loves the sense of community and camaraderie that develops among a group of people when they take on the challenges of the river together, and she is always looking for new and exciting rafting experiences.</p>
+    <p>As an avid social media user, Kayla is always on the lookout for new outdoor adventure companies to follow online. She is drawn to White Water Rafting's purpose of providing an exciting and memorable outdoor adventure experience for their customers and bringing the thrill of white water rafting to a wider audience through their online presence. Kayla is confident that she will have a safe and enjoyable experience with White Water Rafting, and she is excited to join their community of adventure-seekers and rafting enthusiasts.    </p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="/src/images/logo.png" style="border: 1px solid #94afeb;"/>
     <hr />
     <h2>Style Guide</h2>
 
@@ -41,8 +42,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+    <a href="https://mycolor.space/?hex=%2343A5FF&sub=1"
+      target="_blank">https://mycolor.space/?hex=%2343A5FF&sub=1</a>
 
     <table class="colors">
       <tr>
@@ -53,7 +54,7 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
+        <td class="primary">[#4ba9ff]</td>
         <td class="secondary">[#E7C24F]</td>
         <td class="accent1">[#A43312]</td>
         <td class="accent2"></td>
@@ -66,11 +67,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Montserrat, sans-serif
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Lato, Helvetica, sans-serif
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
