--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -31,7 +31,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/logo.png" style="border: 1px solid #94afeb;"/>
+    <img src="https://github.com/manugrana2/WDD-130-Web-Fundamentals/blob/master/src/images/logo.png?raw=true" style="border: 1px solid #94afeb;"/>
     <hr />
     <h2>Style Guide</h2>
 
