--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -76,10 +76,10 @@
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
-      The best Whitewater Rafting in Colorado, White Water Rafting Company
-      offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
-      Springs. Since 1974, we have been family owned and operated, rafting the
-      Shoshone section of Glenwood Canyon and beyond.
+      The best Whitewater Rafting in Florencia, White Water Rafting Company
+      offers rafting on the Las Pailas and Rio Pesacado Rivers in Florencia
+      Caquetá. Since 2000, we have been family owned and operated, rafting the
+      Shoshone section of Beautiful Rivers from Amazon and beyond.
     </p>
     <h3>Colored paragraph example</h3>
     <p class="colored">
