Added nav menu to the home page

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,8 +9,14 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="https://github.com/manugrana2/WDD-130-Web-Fundamentals/blob/master/src/images/logo.png?raw=true" width="120px">
+            <img src="https://github.com/manugrana2/WDD-130-Web-Fundamentals/blob/master/src/images/favicon.png?raw=true" width="120px" id="logo_link" alt="Dry Oar Logo">
         </a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="#">Page 2</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="contactus.html">Contact Us</a>
+        </nav>
     </header>
     
 </body>
