--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="https://github.com/manugrana2/WDD-130-Web-Fundamentals/blob/master/src/images/favicon.png?raw=true" width="120px" id="logo_link" alt="Dry Oar Logo">
+            <img  id="logo_link" src="https://github.com/manugrana2/WDD-130-Web-Fundamentals/blob/master/src/images/favicon.png?raw=true" width="120px" alt="Dry Oar Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -18,6 +18,58 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
-    
+    <div id="hero">
+        <div id="hero-box">
+            <img id="hero-img" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="People enjoying white water rafting">
+        </div>
+        <section id="hero-msg">
+            <h1 class="home-title">Have an adventure</h1>
+            <h4>Make Memories with Dry Oar </h4>
+            <div class="hero-btn-box">
+                <a class="book-btn" href="contactus.html">Book Now</a>
+            </div>
+        </section>
+
+    </div>
+    <main class="home-grid">
+        <section class="rivers-card">
+            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="river in forest">
+            <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png" alt="river icon">
+            <h2>Rivers</h2>
+        </section>
+        <section class="camping-card">
+            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" alt="tent in mountains">
+            <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/fire_icon.png" alt="fire icon">
+            <h2>Camping</h2>
+        </section>
+        <section class="rapids-card">
+            <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="rafting boat">
+            <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" alt="oars icon">
+            <h2>Rapids</h2>
+        </section>
+        <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="Misty mountains">
+        <section class="msg">
+            <h2>More Than Just The Thrill</h2>
+            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+            <a class='join' href="rivers.html">Join Us</a>
+        </section>
+    </main>
+    <footer>
+        <p>Dry Oar &copy; 2023 - Jose Manuel Granados Collazos</p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="contactus.html">Contact Us</a></p>
+        <div class="social">
+            <a href="https://facebook.com">
+                <img src="https://byui-wdd.github.io/wdd130/rafting_images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com">
+                <img src="https://byui-wdd.github.io/wdd130/rafting_images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com">
+                <img src="https://byui-wdd.github.io/wdd130/rafting_images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
+                
 </body>
 </html>
