Removed validation error on line 12

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img  id="logo_link" src="https://github.com/manugrana2/WDD-130-Web-Fundamentals/blob/master/src/images/favicon.png?raw=true" width="120px" alt="Dry Oar Logo">
+            <img  id="logo_link" src="https://github.com/manugrana2/WDD-130-Web-Fundamentals/blob/master/src/images/favicon.png?raw=true" alt="Dry Oar Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
