--- a/aceitedeaguacate/site-plan.html
+++ b/aceitedeaguacate/site-plan.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Aceite de aguacate Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="/wwr/styles/site-plan-rafting.css" />
+  <link type="text/css" rel="stylesheet" href="styles/site-plan.css" />
 </head>
 
 <body>
