--- a/aceitedeaguacate/site-plan.html
+++ b/aceitedeaguacate/site-plan.html
@@ -129,7 +129,7 @@
 
     <h3>[Page 2]</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+  <img src="/src/images/FAQ_WIREFRAME.png" alt="page 2 wireframe"> 
   </main>
 </body>
 
