--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -122,7 +122,7 @@
 
     <h3>[Page 2]</h3>
 
-    <img src="/src/images/FAQ_WIREFRAME.png" alt="page 2 wireframe"/> 
+    <img src="https://manugrana2.github.io/WDD-130-Web-Fundamentals/src/images/FAQ_WIREFRAME.png"/> 
   </main>
 </body>
 
