Added site content draft to the site plan

--- a/aceitedeaguacate/site-plan.html
+++ b/aceitedeaguacate/site-plan.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Aceite de aguacate Site Plan</title>
+  <title>Avocado Oil Site Plan</title>
   <link type="text/css" rel="stylesheet" href="styles/site-plan.css" />
 </head>
 
 <body>
   <header>
-    <h1>Aceite de aguacate Site Plan Site Plan</h1>
+    <h1>Avocado Oil Site Plan Site Plan</h1>
     <h2>Jose Manuel Granados Collazos</h2>
     <h2>WDD 130-W23</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -19,22 +19,59 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>At Aceite de Aguacate, our purpose is to provide information about our product - avocado oil. Our avocado oil is produced from plants that are harvested without the use of chemical pesticides or fertilizers, making it an organic product. We are committed to providing a product that not only benefits your body but also helps to preserve the environment.</p>
+    <p>At Avocado Oil, our purpose is to provide information about our product - avocado oil. Our avocado oil is produced from plants that are harvested without the use of chemical pesticides or fertilizers, making it an organic product. We are committed to providing a product that not only benefits your body but also helps to preserve the environment.</p>
 
 <p>We want to inform people about the numerous health benefits of avocado oil. Avocado oil is known to have high levels of healthy monounsaturated fats, antioxidants, and vitamins that promote good health. It has been shown to help reduce inflammation, lower cholesterol levels, improve heart health, and support skin health, among other benefits.</p>
 
-<p>At Aceite de Aguacate, we are proud to offer a high-quality, organic avocado oil that is good for you and good for the planet. We believe that everyone should have access to healthy and sustainable products, and we are committed to making that a reality.</p>
+<p>At Avocado Oil, we are proud to offer a high-quality, organic avocado oil that is good for you and good for the planet. We believe that everyone should have access to healthy and sustainable products, and we are committed to making that a reality.</p>
 
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>Meet "Healthy Heather," a health-conscious individual in her mid-40s who values organic and sustainable products. Heather is dedicated to living a healthy lifestyle, and she is always looking for ways to support her overall well-being.</p>
+    <p>Meet "Healthy Heather," a health-conscious upper-class individual in her mid-40s who values organic and sustainable products. Heather is dedicated to living a healthy lifestyle, and she is always looking for ways to support her overall well-being.</p>
 <p>As a busy professional with a family, Heather doesn't have a lot of time to devote to cooking, but she still wants to eat healthy and nutritious meals. She has recently become interested in using high-quality oils to add flavor and health benefits to her meals.</p>
-<p>Heather has been following Aceite de Aguacate on social media and is impressed by their commitment to using organic and sustainable practices in their avocado oil production. She appreciates that their oil is free from chemical pesticides and fertilizers, and she trusts that it will provide her with the health benefits she needs to support her active lifestyle.</p>
-<p>Heather is excited to try Aceite de Aguacate's avocado oil in her cooking and is confident that it will enhance the flavors of her meals while providing her with the health benefits she desires. She is proud to support a company that is dedicated to producing high-quality, sustainable products and looks forward to being a part of Aceite de Aguacate's community of health-conscious individuals.</p>
+<p>Heather has been following Avocado Oil on social media and is impressed by their commitment to using organic and sustainable practices in their avocado oil production. She appreciates that their oil is free from chemical pesticides and fertilizers, and she trusts that it will provide her with the health benefits she needs to support her active lifestyle.</p>
+<p>Heather is excited to try Avocado Oil's avocado oil in her cooking and is confident that it will enhance the flavors of her meals while providing her with the health benefits she desires. She is proud to support a company that is dedicated to producing high-quality, sustainable products and looks forward to being a part of Avocado Oil's community of health-conscious individuals.</p>
     <!-- change this -->
+    <hr/>
+    <h3>User Experience</h3>
+    <h4>Why will users visit our website?</h4>
+    <p>People will come to our website because of the growing interest in avocado oil.
+       Our website traffic will be driven by search engines, thanks to the high-quality content we are going to provide, which is well-structured with relevant meta tags. 
+       Our website visitors are likely to be health-conscious consumers who are interested in purchasing high-quality avocado oil.
+       They are likely to be individuals from higher socio-economic backgrounds who are interested in obtaining sustainable avocado oil from the mountains of Colombia delivered to their place.</p>
+    <h4>What questions will your visitors expect your site to answer for them?</h4>
+    <p>Some of the questions visitors are likely to expect to be answered are:</p>
+     <ol>
+      <li>What are the benefits of avocado oil?</li>
+      <li>Why handcrafted avocado oil is a healthier alternative than comercial oils?</li>
+      <li>What are the cosmetic uses of avocado oil?</li>
+      <li>What are the effects of avocado in the hair growth?</li>
+      <li>What are the effects of avocado in the skin?</li>
+      <li>How does avocado oil improves heart health?</li>
+      <li>Avocado oil vs Olive Oil?</li>
+      <li>How our order and shipping process work?</li>
 
+     </ol>
+     <h4>What activities will visitors want to complete on our website?</h4>
+     <p>Visitors to our website may want to complete various activities, including learning about the many benefits of avocado oil for the skin, hair, and overall health. 
+      They may also want to contact us to order the avocado oil we ethically produce.
+       We will provide excellent customer service through our social media channels and guide them through the entire process until they receive the avocado oil at their doorstep.</p>
+    <h4>What information is necessary to complete any actions our site offers?</h4>
+    <p>All the information specified in the questions list</p>
+    <h4>Why will your visitors come to our site instead of another to get this information or complete the actions?</h4>
+    <p>Visitors to our website will choose us over other websites because they can trust that our avocado oil is produced ethically. This trust in our product will encourage visitors to seek information and complete actions on our website rather than on other sites. In addition, we will be transparent and provide all the information about our avocado oil production process, from harvesting the fruits to mechanically extracting the avocado oil.</p>    <!-- change this -->
     <hr />
+    <h2>Content</h2>
+    <h3>What are the benefits of avocado oil?</h3>
+    <p>The avocado oil has many benefits for your health. Unlike other oils that are high in saturated fats and can increase the risk of heart disease, avocado oil is rich in monounsaturated and polyunsaturated fats, which can help improve cholesterol levels and reduce the risk of heart disease. In addition to its heart-healthy benefits, avocado oil is also a good source of vitamin E, an important antioxidant that can help protect your body from damage caused by free radicals. This oil is also rich in oleic acid, which has been shown to have anti-inflammatory properties and may help reduce the risk of certain cancers. Overall, incorporating avocado oil into your diet can be a simple and effective way to improve your health and well-being.</p>
+    <p>One of the special features of avocado oil is that it is good for the skin because it is rich in healthy fats, antioxidants, and vitamins. The fatty acids in avocado oil can help nourish and moisturize the skin, improving its texture and elasticity. Additionally, the antioxidants in avocado oil can help protect the skin from damage caused by free radicals, which can contribute to premature aging and other skin problems. Avocado oil also contains vitamins A, D, and E, which can help soothe and heal irritated or damaged skin. These vitamins can also help improve skin tone and reduce the appearance of fine lines and wrinkles. Lastly, avocado oil is easily absorbed by the skin, making it a great choice for people with dry or sensitive skin. Overall, incorporating avocado oil into your skincare routine can be an effective way to nourish and protect your skin.</p>
+    <p>In terms of comparation between Avocado oil and olive oil, both have their own unique benefits and uses. While both oils are high in heart-healthy monounsaturated fats, avocado oil has a higher smoke point than olive oil, making it a better choice for high-heat cooking methods like frying and grilling. Additionally, avocado oil contains more vitamin E than olive oil, which is an antioxidant that can help protect your cells from damage caused by free radicals. On the other hand, olive oil is higher in antioxidants called polyphenols, which can help reduce inflammation and lower the risk of chronic diseases like heart disease and cancer. Both oils also have anti-inflammatory properties, which can help reduce the risk of developing chronic diseases. Ultimately, the choice between avocado oil and olive oil depends on your personal preferences and cooking needs.</p>
+    <p>In conclusion, avocado oil is a highly beneficial addition to your diet and skincare routine. Its unique composition of healthy fats, antioxidants, and vitamins make it a great choice for improving heart health, reducing inflammation, and protecting your skin from damage. With its high smoke point, avocado oil is also a better option for high-heat cooking methods than olive oil. However, both oils have their own unique benefits and uses, and the choice between them ultimately depends on personal preferences and cooking needs. By incorporating avocado oil into your daily routine, you can enjoy the many benefits it has to offer and improve your overall health and well-being.</p>
+    <h3>How our order and shipping process work?</h3>
+    <p>At Aceite de Aguacate, we strive to make the ordering and shipping process as easy as possible for our customers. You can find factual information about our product on our website, which will help you make an informed decision about your health-conscious purchase. Once you've decided to order our avocado oil, you can reach out to us on WhatsApp, Instagram, or Facebook. We will ask you for some shipping details and send you a simple PayPal link to complete the transaction. We take great care to ensure that your product arrives on time and in excellent condition, and we will provide you with accurate estimates of when your order will arrive. Additionally, we value your feedback and may reach out to you within 30 days to hear your thoughts on our product and service. Order with confidence from Aceite de Aguacate and start enjoying the health benefits of our organic avocado oil.</p>
+    <p>Remenber that  incorporating avocado oil into your diet and skincare routine can have numerous health benefits. Its rich content of monounsaturated and polyunsaturated fats make it a heart-healthy choice that can help reduce the risk of heart disease. Avocado oil is also a great source of vitamin E and oleic acid, which can help protect your body from damage caused by free radicals and inflammation. Furthermore, avocado oil is a fantastic option for nourishing and protecting your skin due to its high levels of healthy fats, antioxidants, and vitamins. With so many benefits, it's easy to see why avocado oil is becoming increasingly popular as a versatile and healthy oil option.</p>
+    <hr/>
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
