--- a/aceitedeaguacate/site-plan.html
+++ b/aceitedeaguacate/site-plan.html
@@ -139,22 +139,22 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="#">Home</a>
-      <a href="#">Page2</a>
+      <a href="#">Order Process</a>
+      <a href="#">Our oil benefits</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr />
     <h2>Site Map</h2>
     <div class="sitemap">
       <div class="sm-home">Home</div>
-      <div class="sm-page2">
-        [Page2]
-        <!-- this page will have a name later -->
-      </div>
-      <div class="sm-page3">Contact Us</div>
-
+      <div class="sm-about">Order Process</div>
+      <div class="sm-services">Our oil benefits</div>
+      <div class="sm-contact">Contact Us</div>
+    
       <div class="top">&nbsp;</div>
       <div class="left">&nbsp;</div>
       <div class="right">&nbsp;</div>
+      <div class="bottom">&nbsp;</div>
     </div>
     <hr />
     <h2>Wireframes</h2>
