Added oil benefits and order process wireframes to siteplan

--- a/aceitedeaguacate/site-plan.html
+++ b/aceitedeaguacate/site-plan.html
@@ -164,9 +164,13 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Our Oil benefits</h3>
 
-  <img src="/src/images/FAQ_WIREFRAME.png" alt="page 2 wireframe"> 
+    <img src="https://manugrana2.github.io/WDD-130-Web-Fundamentals/aceitedeaguacate/src/images/our_oil_benefits_wireframe.png" alt="Our Oil benefits wireframe" />
+
+    <h3>Order Process</h3>
+
+  <img src="https://manugrana2.github.io/WDD-130-Web-Fundamentals/aceitedeaguacate/src/images/order_process_wireframe.png" alt="order process wireframe"> 
   </main>
 </body>
 
