Added 2 subpages html

--- a/aceitedeaguacate/site-plan.html
+++ b/aceitedeaguacate/site-plan.html
@@ -138,10 +138,10 @@
     <h3>Navigation</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Order Process</a>
-      <a href="#">Our oil benefits</a>
-      <a href="#">Contact Us</a>
+      <a href="index.html">Inicio</a>
+      <a href="beneficios-aceite-aguacate.html">Beneficios</a>
+      <a href="comprar-aceite-aguacate.html">¿Cómo comprar?</a>
+      <a href="#">Contactanos</a>
     </nav>
     <hr />
     <h2>Site Map</h2>
