Added media content for html subpages

--- a/aceitedeaguacate/comprar-aceite-aguacate.html
+++ b/aceitedeaguacate/comprar-aceite-aguacate.html
@@ -20,31 +20,31 @@
                 <a href="contacto.html">Contactanos</a>
             </nav>
         </header>
-        <main class="benefits-grid">
-           <div class="benefits-title"><h1>¿Cómo comprar aceite de aguacate?</h1></div>
-           <section class="benefits-main">
+        <main class="buy-grid">
+           <div class="buy-title"><h1>¿Cómo comprar aceite de aguacate?</h1></div>
+           <section class="buy-main">
             <img src="https://static.wixstatic.com/media/6700e1_8e936be98aad4c60b2b47c5ebe6e4bd7~mv2.png/v1/fill/w_750,h_750,al_c,q_90,usm_0.66_1.00_0.01/6700e1_8e936be98aad4c60b2b47c5ebe6e4bd7~mv2.webp">
            </section>
-           <div class="benefits-cards">
-            <section class="benefits-card">
+           <div class="buy-cards">
+            <section class="buy-card">
                 <h2> Paso 1 </h2>
-                <img src="" alt="Paso 1">
-                <p>Paso 1 text</p>
+                <img src="https://cdn.vectorstock.com/i/preview-1x/21/10/whatsapp-logo-messenger-icon-realistic-social-vector-46312110.jpg" alt="Paso 1">
+                <p>Hacer click en el botón comprar mediante WhatsApp</p>
             </section>
-            <section class="benefits-card">
+            <section class="buy-card">
                 <h2> Paso 2 </h2>
-                <img src="" alt="Paso 2">
-                <p>Paso 2 text</p>
+                <img src="https://static.thenounproject.com/png/1329518-200.png" alt="Paso 2">
+                <p>Solicitar los datos de la transferencia bancaria, realizar la  consignación, y enviar el comprobante de pago.</p>
             </section>
-            <section class="benefits-card">
+            <section class="buy-card">
                 <h2> Paso 3 </h2>
-                <img src="" alt="Paso 3">
-                <p>Paso 3 text</p>
+                <img src="https://static.thenounproject.com/png/4299066-200.png" alt="Paso 3">
+                <p>Despacharemos el pedido en tiempo record a cualquier parte de Colombia.</p>
             </section>
-            <section class="benefits-card">
-                <h2> Benefit 4 </h2>
-                <img src="" alt="Paso 4">
-                <p>Paso 4 text</p>
+            <section class="buy-card">
+                <h2>Paso 4 </h2>
+                <img src="https://cdn-icons-png.flaticon.com/512/4237/4237057.png" alt="Paso 4">
+                <p>Recibirá en su domicilio el aceite de Aguacate Organic Health, una de las mejores opciones para remplazar el aceite de oliva. Un aceite orgánico producido por mujer rural en el eje cafetero de Colombia.</p>
             </section>
            </div>
         </main>
