--- a/aceitedeaguacate/beneficios-aceite-aguacate.html
+++ b/aceitedeaguacate/beneficios-aceite-aguacate.html
@@ -27,27 +27,27 @@
            </section>
             <section class="benefits-card card1">
                 <h2> Disminuye el colesterol y mejora la salud cardiovascular </h2>
-                <img src="https://img.freepik.com/free-icon/lifeline-heart-outline_318-48031.jpg" alt="Benefit img ">
+                <img src="src/images/heart-icon.png" alt="Benefit img ">
                 <p>A diferencia de otros aceites que tienen un alto contenido de grasas saturadas y pueden aumentar el riesgo de enfermedades cardíacas, el aguacate es rico en grasas monoinsaturadas que pueden ayudar a reducir el colesterol LDL, conocido como "colesterol malo". Además, contiene potasio, un mineral que ayuda a controlar la presión arterial.</p>
             </section>
             <section class="benefits-card card2">
                 <h2>Beneficioso para la salud de la piel y el cabello</h2>
-                <img src="https://cdn-icons-png.flaticon.com/512/4383/4383086.png" alt="Benefit img ">
+                <img src="src/images/beauty-icon.png" alt="Benefit img ">
                 <p>Los antioxidantes del aceite de aguacate pueden ayudar a proteger la piel del daño causado por los radicales libres, que pueden contribuir al envejecimiento prematuro y otros problemas de la piel. El aceite de aguacate también contiene vitaminas A, D y E, que pueden ayudar a calmar y curar la piel irritada o dañada. Estas vitaminas también pueden ayudar a mejorar el tono de la piel y reducir la aparición de líneas finas y arrugas.</p>
             </section>
             <section class="benefits-card card3">
                 <h2>Puede ser usado para freir</h2>
-                <img src="https://static.thenounproject.com/png/2111400-200.png" alt="Benefit img ">
+                <img src="src/images/fry-icon.png" alt="Benefit img ">
                 <p>El aceite de aguacate tiene un punto de humeo más alto que el aceite de oliva, lo que lo convierte en una mejor opción para métodos de cocción a alta temperatura como freír y asar a la parrilla.</p>
             </section>
             <section class="benefits-card card4">
                 <h2>Ayuda en la pérdida de peso</h2>
-                <img src="https://static.thenounproject.com/png/118506-200.png" alt="Benefit img ">
-                <p>A pesar de ser alto en calorías, el aguacate es muy saciante y puede ayudar a reducir la ingesta calórica total. Además, su alto contenido de fibra puede mejorar la salud digestiva y promover la eliminación de toxinas.</p>
+                <img src="src/images/loss-weight-icon.png" alt="Benefit img ">
+                <p>El aceite de aguacate es bajo en calorías, muy saciante y puede ayudar a reducir la ingesta calórica total. Además, puede mejorar la salud digestiva y promover la eliminación de toxinas.</p>
             </section>
             <section class="benefits-card card5">
                 <h2>Promueve una mejor absorción de nutrientes</h2>
-                <img src="https://icon-library.com/images/healthy-food-icon-png/healthy-food-icon-png-18.jpg" alt="Benefit img ">
+                <img src="src/images/nutritive-icon.png" alt="Benefit img ">
                 <p>El aguacate es rico en grasas saludables que pueden ayudar al cuerpo a absorber mejor los nutrientes de otros alimentos, especialmente las vitaminas liposolubles como la A, D, E y K.</p>
             </section>
         </main>
